# HW7-REGRESSION

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
regression/: logreg.py
test/: test_logreg.py
