[build-system]
requires = [
	"flit_core >=3.8",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"
dynamic=["version"]

[project]
name = "regression"
authors = [{name = "Han Chen", email = "han.chen@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy", "scipy", "matplotlib", "scikit-learn", "pandas"]

[tool.coverage.run]
source = ["src"] # parent directory of package

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.urls]
Home = "https://github.com/hchen725/HW7-REGRESSION"